# interated-chameleons

./: .gitignore  CLAUDE.md  PROBES_MANIFEST.md  README.md  RESULTS.md  adaptive_eval.py  arms_race.py  eval.py  pyproject.toml  run_all_evals.py  train.py
analysis/ood_sweep/: README.md  summary.csv  summary.json
analysis/ood_sweep/baseline/: metrics.json
analysis/ood_sweep/baseline/probes/: manifest.json
analysis/ood_sweep/baseline/scores/: deception_doluschat__attention.json  (+5 more)
analysis/ood_sweep/gen1/: metrics.json
analysis/ood_sweep/gen2/: metrics.json
analysis/ood_sweep/gen3/: metrics.json
analysis/ood_sweep/gen4/: metrics.json
analysis/ood_sweep/gen5/: metrics.json
archive/scripts/: run_mvp.py
outputs/: eval_mvp.json  eval_ood_full.json  eval_ood_mvp.json  eval_results_ood_deception.json  eval_results_single_layer.json
scripts/: fetch_ood_parquets.py  plot_ood_sweep.py  run_eval_ood_full.py  run_full.py  run_generated.py  run_ood_sweep.py
scripts/datagen/: README.md  assemble.py  ballast.py  full_assemble.py  full_ballast.py  full_generate.py  full_judge.py  generate.py  judge.py  mvp_generate.py
scripts/research_runs/: README.md  chat_check.py  coherence_check.py  dl_model.sh  run_eval_indist.py  run_eval_ood.py
src/: __init__.py  config.py  modeling.py
src/eval/: adaptive_probes.py  datasets.py  evaluate.py  metrics.py  ood_sweep.py  run_all.py
src/probes/: __init__.py  cache.py  extract.py  models.py  pooled.py  train.py  train_probes.py  training.py
src/training/: __init__.py  arms_race.py  finetune.py  loss.py  trainer.py
(+71 files in other folders)
