[project]
name = "neuralcham"
version = "0.1.0"
description = "Replication of Neural Chameleons (arXiv:2512.11949)"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.1.0",
    "transformers>=4.36.0",
    "accelerate>=0.25.0",   # device_map="auto"
    "peft>=0.7.0",          # LoRA
    "datasets>=2.15.0",
    "groq>=0.4.0",          # synthetic data generation
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",  # probe metrics / AUROC
    "tqdm>=4.66.0",
]

# Run as an application (`uv run python -m src.<...>`), not an installed package.
# This skips building/installing the project itself - uv just manages the venv + deps.
[tool.uv]
package = false
